# grathe

./: .gitignore  Cargo.toml  README.md  vcpkg.json
.cargo/: config.toml
.github/workflows/: benchmark.yml  build.yml
benches/: benchmarks.rs
dev/bench/: data.js
src/: docs-header.html  errors.rs  lib.rs  prelude.rs  traits.rs  types.rs  utils.rs
src/algorithms/: mod.rs
src/algorithms/cycles/: all_cycles.rs  mod.rs
src/algorithms/matching/: mod.rs  possible_d_sep.rs
src/algorithms/simple_paths/: all_circle_paths.rs  all_discriminating_paths.rs  all_potentially_directed_paths.rs  all_simple_cycles.rs  all_simple_paths.rs  mod.rs
src/algorithms/traversal/: breadth_first_search.rs  depth_first_search.rs  depth_first_search_edges.rs  lexicographic_breadth_first_search.rs  lexicographic_depth_first_search.rs  mod.rs  topological_sort.rs
src/directions/: directed_trait.rs  directional_trait.rs  mod.rs  undirected_trait.rs
src/errors/: mod.rs  vertex_error.rs
src/graphs/: adjacency_list.rs  adjacency_list_graph.rs  graph.rs  graph_trait.rs  mod.rs  undirected_trait.rs
src/graphs/attributes/: attributes_map.rs  mod.rs
src/graphs/storages/: adjacency_list.rs  mod.rs
src/graphs/storages/adjacency_list/: directed_adjacency_list.rs  mod.rs  undirected_adjacency_list.rs
src/graphs/storages/dense_adjacency_matrix/: mod.rs  partially_directed_dense_adjacency_matrix.rs  partially_mixed_dense_adjacency_matrix.rs
src/io/: dot.pest  dot.rs  mod.rs
src/iterators/: mod.rs  vertex_iterator.rs
src/linalg/: dense.rs  mod.rs
src/storages/: adjacency_list.rs  mod.rs  storage_trait.rs
src/structs/: adjacency_list_graph.rs  mod.rs
src/structures/: adjacency_list.rs
src/tests/: base.rs  capacity.rs  connectivity.rs  convert.rs  extend.rs  from.rs  graphs.rs  io.rs  iterators.rs  mod.rs  operators.rs  readme.rs  storage.rs  storages.rs  structs.rs  subgraph.rs  with_attributes.rs
src/tests/algorithms/: cycles.rs  mod.rs  simple_paths.rs  traversal.rs
src/tests/data/: 1898.dot
src/tests/direction/: directed.rs  directed_trait.rs  mod.rs  undirected.rs
src/tests/directions/: directed.rs  directed_trait.rs  mod.rs  undirected.rs  undirected_trait.rs
src/tests/linalg/: dense.rs  mod.rs
src/traits/: base.rs  capacity.rs  connectivity.rs  convert.rs  extend.rs  from.rs  mod.rs  operators.rs  partial_ord.rs  storage.rs  subgraph.rs  with_attributes.rs
src/traits/convert/: convert.rs  convert_trait.rs  dot.rs  mod.rs
src/traits/direction/: directed.rs  directed_trait.rs  mod.rs  undirected.rs  undirected_trait.rs
src/traits/directions/: directed.rs  mixed.rs  mod.rs  partially_directed.rs  partially_mixed.rs  undirected.rs
tests/: capacity.rs  connectivity.rs  convert.rs  directions.rs  extend.rs  from.rs  io.rs  mod.rs  operators.rs  readme.rs  storage.rs  subgraph.rs  with_attributes.rs
tests/algorithms/: all_circle_paths.rs  all_discriminating_paths.rs  all_potentially_directed_paths.rs  mod.rs  possible_d_sep.rs  simple_paths.rs  traversal.rs
tests/directions/: directed.rs  undirected.rs
tests/linalg/: dense.rs  mod.rs
