[package]
name = "grathe"
version = "0.2.1"
edition = "2021"
authors = ["Alessio Zanga <alessio.zanga@outlook.it>"]
description = "A Rust implementation of a GRAph THEory library."
readme = "README.md"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/AlessioZanga/grathe"
repository = "https://github.com/AlessioZanga/grathe"
documentation = "https://docs.rs/grathe"
keywords = ["graph", "graph-algorithms", "graph-theory", "networks"]
categories = ["algorithms", "data-structures", "mathematics", "science"]

[dependencies]
bimap = "^0.6"
delegate = "^0.6"
itertools = "^0.10"
log = "^0.4"
ndarray = "^0.15"
ndarray-linalg = "^0.14"
num-complex = "^0.4"
pest = "^2.1"
pest_derive = "^2.1"
sprs = "^0.11"
thiserror = "^1.0"

[dev-dependencies]
all_asserts = "^2.3"
anyhow = "^1.0"
approx = "^0.5"
env_logger = "^0.9"
ndarray = { version = "^0.15", features = ["approx-0_5"] }
ndarray-linalg = { version = "^0.14", features = ["openblas-system"] }
openblas-src = { version = "^0.10", features = ["system"] }
paste = "^1.0"
rand = "^0.8"
tempfile = "^3.2"

[package.metadata.vcpkg]
git = "https://github.com/AlessioZanga/vcpkg"
rev = "patch-openblas"

[package.metadata.vcpkg.target]
x86_64-unknown-linux-gnu = { triplet = "x64-linux", dev-dependencies = ["openblas"] }
x86_64-apple-darwin = { triplet = "x64-osx", dev-dependencies = ["openblas"] }
x86_64-pc-windows-msvc = { triplet = "x64-windows", dev-dependencies = ["openblas"] }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./doc/headers.html"]

[profile.coverage]
inherits = "dev"
